# grainLearning

./: .readthedocs.yaml  pyproject.toml  readthedocs.yaml
docs/: conf.py  conf.py.old  requirements.txt
docs/_build/doctrees/: about.doctree  api.doctree  environment.pickle  index.doctree  prerequisites.doctree
docs/_build/html/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  prerequisites.rst.txt
docs/source/: conf.py
examples/linear_regression/: example_linear_regression.py
expired/older/: recursive_bayesian.py  smc.py  test_config.py
grainlearningpy/: __init__.py  calibrationtoolbox.py  iterativebayesianfilter.py  models.py  parameters.py  sequentialmontecarlo.py
package/: .readthedocs.yaml  pyproject.toml
package/examples/linear_regression/: example_linear_regression.py
package/expired/older/: utilities.py
package/grainlearning/: gaussianmixturemodel.py  iterativebayesianfilter.py  models.py
package/tests/integration/: test_linear.py  test_linreg.py
package/tests/unit/: test_calibrationtoolbox.py  test_iterativebayesianfilter.py
tests/unit/: test_guassianmixturemodel.py  test_iterativebayesianfilter.py  test_models.py  test_observations.py  test_parameters.py  test_sequentialmontecarlo.py
