[tool.poetry]
name = "grainlearning"
version = "0.1.0"
description = "Python-based Bayesian Calibration tool for estimating parameter uncertainties in geomachanical models."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
numpy = "^1.23.1"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
ipython = "^8.4.0"
pathlib = "^1.0.1"
scikit-learn = "^1.1.2"
pandas = "^1.4.3"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
jupyter = "^1.0.0"
pytest = "^7.1.2"
unittest = "^0.0"
Sphinx = "^5.1.1"
sphinx-autodoc-typehints = "^1.19.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
